--- a/src/style-guide/components/ProjectsHero/style.module.scss
+++ b/src/style-guide/components/ProjectsHero/style.module.scss
@@ -7,3 +7,8 @@
     margin-top: 3rem;
   }
 }
+@media (max-width: 768px) {
+  .ProjectsHero {
+    height: 50vh;
+  }
+}
