--- a/src/style-guide/page-components/projectCardSection/style.module.scss
+++ b/src/style-guide/page-components/projectCardSection/style.module.scss
@@ -23,7 +23,7 @@
   .ProjectCardSection {
     @include mixins.flexCenter;
     h2 {
-      font-size: 3rem;
+      font-size: 4rem;
     }
   }
 }
